src/objects/Opportunity.object
<CustomObject>
    <businessProcesses>
        <fullName>Delivery Process</fullName>
        <description>Sales process to be followed for deliveries.</description>
        <isActive>true</isActive>
        <values>
            <fullName>Delivered</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>Verified</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Invoice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is a lookup to the related invoice.</description>
        <inlineHelpText>This field is a lookup to the related invoice.</inlineHelpText>
        <label>Invoice</label>
        <referenceTo>Order</referenceTo>
        <relationshipLabel>Deliveries</relationshipLabel>
        <relationshipName>Deliveries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Purchase_Discount__c</fullName>
        <defaultValue>0.15</defaultValue>
        <description>Purchase Discount in effect on the Date of the Delivery</description>
        <inlineHelpText>Purchase Discount in effect on the Date of the Delivery</inlineHelpText>
        <label>Purchase Discount</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Sale_Discount__c</fullName>
        <defaultValue>0.30</defaultValue>
        <description>The Sale Discount in effect on the Date of the Delivery.</description>
        <inlineHelpText>The Sale Discount in effect on the Date of the Delivery.</inlineHelpText>
        <label>Sale Discount</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Total_List_Price__c</fullName>
        <description>This is the total list price value for all of the beverages picked-up or delivered during a delivery.</description>
        <inlineHelpText>This is the total list price value for all of the beverages picked-up or delivered during a delivery.</inlineHelpText>
        <label>Total List Price</label>
        <summarizedField>OpportunityLineItem.Total_List_Price__c</summarizedField>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <listViews>
        <fullName>AllOpportunities</fullName>
        <filterScope>Everything</filterScope>
        <label>All Opportunities</label>
    </listViews>
    <listViews>
        <fullName>ClosingNextMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>NEXT_MONTH</value>
        </filters>
        <label>Closing Next Month</label>
    </listViews>
    <listViews>
        <fullName>ClosingThisMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Closing This Month</label>
    </listViews>
    <listViews>
        <fullName>Default_Opportunity_Pipeline</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>LAST_N_MONTHS:3</value>
        </filters>
        <label>商談パイプライン</label>
    </listViews>
    <listViews>
        <fullName>MyOpportunities</fullName>
        <filterScope>Mine</filterScope>
        <label>My Opportunities</label>
    </listViews>
    <listViews>
        <fullName>NewLastWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>New Last Week</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>Private</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.PRIVATE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Private</label>
    </listViews>
    <listViews>
        <fullName>Won</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.WON</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Won</label>
    </listViews>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>